--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -26,8 +27,8 @@
                             상품관리자
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">상품등록</a></li>
-                            <li><a class="dropdown-item" href="#">상품관리(목록)</a></li>
+                            <li><a class="dropdown-item" href="/admin/item/new">상품등록</a></li>
+                            <li><a class="dropdown-item" href="/admin/item/list">상품관리(목록)</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
@@ -35,22 +36,27 @@
 
 
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            마이페이지
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">장바구니</a></li>
-                            <li><a class="dropdown-item" href="#">구매이력</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">나의 정보</a></li>
-                            <li><a class="dropdown-item" href="#">로그인</a></li>
-                            <li><a class="dropdown-item" href="#">로그아웃</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                    </li>
+
+                        <th:block sec:authorize="hasRole('ROLE_ADMIN')">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <span th:text="${#authentication.principal.username}"></span> 마이페이지
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="/cart">장바구니</a></li>
+                                    <li><a class="dropdown-item" href="/orders">구매이력</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="#">나의 정보</a></li><li><a class="dropdown-item" href="/members/logout">로그아웃</a></li>
+                                </ul>
+                            </li>
+                        </th:block>
+
+                    <th:block sec:authorize="isAnonymous()">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/members/login" aria-disabled="true">로그인</a>
+                        </li>
+                    </th:block>
+
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
