--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -10,71 +10,50 @@
 <body>
 <th:block layout:fragment="content">
 
+
   <div class="row">
     <div class="col">
-      <div id="carouselExample" class="carousel slide">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="/dog.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="/dog.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="/dog.jpg" class="d-block w-100" alt="...">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+      이곳은 이미지 들어갈 자리!! <br>
+      이곳은 이미지 들어갈 자리!! <br>
+      이곳은 이미지 들어갈 자리!! <br>
+      이곳은 이미지 들어갈 자리!! <br>
     </div>
   </div>
 
+  <th:block th:if="${#lists.isEmpty(pageResponseDTO.dtoList)}">
+    <div class="row row-cols-md-3">
+      <div class="col">
 
-
-    <th:block th:if="${#lists.isEmpty(itemDTOPageResponseDTO.dtoList)}">
-      <div class="row">
-        <div class="col text-center">
-
-          <h1>비어있음</h1>
-
-        </div>
       </div>
+    </div>
+  </th:block>
 
-    </th:block>
-    <th:block th:unless="${#lists.isEmpty(itemDTOPageResponseDTO.dtoList)}">
-      <div class="row row-cols-md-3">
 
-        <th:block th:each="dto: ${itemDTOPageResponseDTO.dtoList}">
-          <div class="col mb-3">
-            <a th:href="@{/item/read(id=${dto.id})}">
-              <div class="card">
-                <img src="/dog.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title" th:text="${dto.itemNm}">Card title</h5>
-                  <p class="card-text text-truncate" th:text="${dto.itemDetail}">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <p class="card-text" th:text="${dto.price+'원'}"></p>
-                </div>
+  <th:block th:unless="${#lists.isEmpty(pageResponseDTO.dtoList)}">
+    <div class="row row-cols-md-3">
+
+      <th:block th:each="dto: ${pageResponseDTO.dtoList}">
+        <div class="col mb-3">
+          <a th:href="@{/item/read(id=${dto.id})}">
+            <div class="card">
+              <th:block th:each="img:${dto.itemImgDTOList}">
+                <th:block th:if="${img.repimgYn == 'Y'}">
+                  <img th:src="${img.imgUrl}" class="card-img-top" th:alt="${dto.itemNm}">
+                </th:block>
+              </th:block>
+              <div class="card-body">
+                <h5 class="card-title" th:text="${dto.itemNm}">Card title</h5>
+                <p class="card-text text-truncate" th:text="${dto.itemDetail}">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text" th:text="${dto.price+'원'}">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
-            </a>
-
-
-          </div>
-        </th:block>
-
-      </div>
-    </th:block>
-
-
-
+            </div>
+          </a>
+        </div>
+      </th:block>
+    </div>
+  </th:block>
 
 </th:block>
-
 </body>
 </html>
