--- a/src/main/resources/templates/order/orderHist.html
+++ b/src/main/resources/templates/order/orderHist.html
@@ -23,41 +23,43 @@
 
             <h4 th:text="${#temporals.format(orderHistDTO.orderDate, 'yyyy-MM-dd HH:mm')} + ' 주문'"></h4>
             <div class="ms-3">
+                <div class="row shadow ㅡㅠ-4">
+                    <th:block  th:if="${orderHistDTO.orderStatus.name() == 'ORDER'}">
+                        <button type="button" th:value="${orderHistDTO.orderId}" class="cancelbtn"> 주문취소</button>
+                    </th:block>
+                    <th:block th:unless="${orderHistDTO.orderStatus.name() == 'ORDER'}">
+                        <h4>(취소 완료)</h4>
+                    </th:block>
 
-                <th:block  th:if="${orderHistDTO.orderStatus.name() == 'ORDER'}">
-                    <button type="button" th:value="${orderHistDTO.orderId}" class="cancelbtn"> 주문취소</button>
-                </th:block>
-                <th:block th:unless="${orderHistDTO.orderStatus.name() == 'ORDER'}">
-                    <h4>(취소 완료)</h4>
-                </th:block>
-
-
-                        <div class="card">
-                            <div class="row">
-
-                                <th:block th:each="orderItemDTO: ${orderHistDTO.orderItemDTOList}">
-                                    <div class="col" >
-                                        <img  style="width: 100px;height: 100px" th:src="${orderItemDTO.imgUrl}" th:alt="${orderItemDTO.itemNm}">
-                                    </div>
-
-                                    <div class="col">
-                                        <strong><span th:text="${orderItemDTO.itemNm}" ></span></strong>
-                                        <span th:text="${orderItemDTO.orderPrice} + '원'"></span>
-                                        <span th:text="${orderItemDTO.count} + '개'"></span>
+                </div>
 
 
-                                    </div>
+                <div class="card">
+                    <div class="row">
 
-                                </th:block>
+                        <th:block th:each="orderItemDTO: ${orderHistDTO.orderItemDTOList}">
+                            <div class="col align-items-center" >
+                                <div class="col-4">
+                                    <img  style="width: 100px;height: 100px" th:src="${orderItemDTO.imgUrl}" th:alt="${orderItemDTO.itemNm}">
+                                </div>
+                            </div>
 
-
+                            <div class="col-8">
+                                <strong><span th:text="${orderItemDTO.itemNm}" ></span></strong>
+                                <span th:text="${orderItemDTO.orderPrice} + '원'"></span>
+                                <span th:text="${orderItemDTO.count} + '개'"></span>
 
 
                             </div>
-                        </div>
+
+                        </th:block>
+
+                    </div>
+                </div>
 
 
             </div>
+
 
 
         </th:block>
